updated school link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="https://trainer-pro.com/" class="btn btn-primary"target="_blank">Trainer Pro</a><br><hr>
                     <a href="http://blog.nfraz.co.in/admin" class="btn btn-primary"target="_blank">Blog Website</a><br><hr>
                     <a href="https://pixarealestate.pxpanel.in/web/index.php" class="btn btn-primary"target="_blank">Real-State-broker website</a><br><hr>
-                    <a href="http://167.71.237.149:8000" class="btn btn-primary"target="_blank">Multi School Management System</a>
+                    <a href="http://eduwhiz.in/" class="btn btn-primary"target="_blank">Multi School Management System</a>
                     </div>
                 </div>
             </div><br><br>
