--- a/index.html
+++ b/index.html
@@ -8,27 +8,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark">    
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+    <nav class="navbar navbar  bg-warning">    
+        <p style="margin-left: 600px; font-size: 20px;">Ajay kumar</p>
     </nav><br><br>
     <div class="container">
-        <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-dark p-4">
-              <h5 class="text-white h4">About Me</h5><hr style="background-color: white;">
-              <!-- <h3 class="text-white h4" style="text-align: center;">Developer</h3> -->
-              <span class="" style="color: aquamarine;"> <span><h3 class="text-white h4">Developer</h3></span> Hi, I am Ajay. I am from Bangalore professionally I am a well full-stack developer .you can contact me. if you want to make your own website, app, anything related to web development discussion just call me at __ 7781031768</span>
-            </div>
-        </div>
-        <br>
+        <div class="card-body  bg-warning" style="margin:10px; background-color:peachpuff;">
+          <b style="text-shadow: 10;"> Full Stack Developer</b><br><span style="font-size: 18px;"> Hi, I am Ajay. I am from Bangalore professionally I am a well full-stack developer .you can contact me. if you want to make your own website, app, anything related to web development discussion just call me at __ 7781031768</span>
+        </div><br><br>
         <div class="row">
             <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
-                    <h5 class="card-title">Internship Project Link </h5><hr>
+                    <h5 class="card-title" style="background-color:;">Internship Project Link </h5><hr>
                     <p class="card-text">I have worked on all these project in Internship so I have real Experience of industry project.</p><hr>
                     <a href="https://trainer-pro.com/" class="btn btn-primary"target="_blank">Trainer Pro</a><br><hr>
                     <a href="http://blog.nfraz.co.in/admin" class="btn btn-primary"target="_blank">Blog Website</a><br><hr>
@@ -40,7 +31,7 @@
             <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Self learning Project Link </h5><hr>
+                        <h5 class="card-title" style="background-color:;">Self learning Project Link </h5><hr>
                         <p class="card-text">I have made all these project for learning only and also checkout my github profile for more </p><hr>
                         <a href="https://ajaykumar776.github.io/advance_todo/" class="btn btn-primary">To Do App</a><br><hr>
                         <a href="https://ajaykumar776.github.io/tic_tac_game/" class="btn btn-primary">Tic Tac Games</a><hr>
@@ -52,7 +43,7 @@
             <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Self learning Project Link </h5><hr>
+                        <h5 class="card-title" style="background-color:;">Self learning Project Link </h5><hr>
                         <p class="card-text">I have made all these project for learning only also checkout my github profile for more </p><hr>
                         <a href="https://github.com/ajaykumar776/Online-Notice-Board-System" class="btn btn-primary">online Notice Board System </a><br><hr>
                         <div class="dropdown">
@@ -71,130 +62,44 @@
             </div>
         </div>
         <br><br>
-    </div>
-        <hr>
-    <div class="container-fluid">
-        <footer class="text-center text-white" style="background-color: #caced1;">
-            <!-- Grid container -->
-            <div class="container p-4">
-              <!-- Section: Images -->
-              <section class="">
-                <div class="row">
-                  <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                    <div
-                      class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                      data-ripple-color="light"
-                    >
-                      <img
-                        src="https://mdbootstrap.com/img/new/fluid/city/113.jpg"
-                        class="w-100"
-                      />
-                      <a href="#!">
-                        <div
-                          class="mask"
-                          style="background-color: rgba(251, 251, 251, 0.2);"
-                        ></div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                    <div
-                      class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                      data-ripple-color="light"
-                    >
-                      <img
-                        src="https://mdbootstrap.com/img/new/fluid/city/111.jpg"
-                        class="w-100"
-                      />
-                      <a href="#!">
-                        <div
-                          class="mask"
-                          style="background-color: rgba(251, 251, 251, 0.2);"
-                        ></div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                    <div
-                      class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                      data-ripple-color="light"
-                    >
-                      <img
-                        src="https://mdbootstrap.com/img/new/fluid/city/112.jpg"
-                        class="w-100"
-                      />
-                      <a href="#!">
-                        <div
-                          class="mask"
-                          style="background-color: rgba(251, 251, 251, 0.2);"
-                        ></div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                    <div
-                      class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                      data-ripple-color="light"
-                    >
-                      <img
-                        src="https://mdbootstrap.com/img/new/fluid/city/114.jpg"
-                        class="w-100"
-                      />
-                      <a href="#!">
-                        <div
-                          class="mask"
-                          style="background-color: rgba(251, 251, 251, 0.2);"
-                        ></div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                    <div
-                      class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                      data-ripple-color="light"
-                    >
-                      <img
-                        src="https://mdbootstrap.com/img/new/fluid/city/115.jpg"
-                        class="w-100"
-                      />
-                      <a href="#!">
-                        <div
-                          class="mask"
-                          style="background-color: rgba(251, 251, 251, 0.2);"
-                        ></div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                    <div
-                      class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                      data-ripple-color="light"
-                    >
-                      <img
-                        src="https://mdbootstrap.com/img/new/fluid/city/116.jpg"
-                        class="w-100"
-                      />
-                      <a href="#!">
-                        <div
-                          class="mask"
-                          style="background-color: rgba(251, 251, 251, 0.2);"
-                        ></div>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </section>
-              <!-- Section: Images -->
-            </div><br>
-            <!-- Grid container -->
-          
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-              © 2021 Copyright:
-              <a class="text-white" href="https://mdbootstrap.com/">https://ajaykumar776.github.io/my_portfolio_v3/</a>
-            </div>
-            <!-- Copyright -->
-          </footer>
+    </div> <br>
+    <footer>
+      <div class="container-fluid bg-warning" style="text-decoration-color: white;">
+          <div class="row" style="padding: 10px;">
+            <div class="col-sm-2"></div>
+              <div class="col-sm-3">
+                  <a href="#about"><span class="glyphicon glyphicon-user"></span>About</p></a>
+                  <a href="#skill"><span class="glyphicon glyphicon-briefcase"></span>Skill</p></a>
+                  <a href="#education"><span class="glyphicon glyphicon-chevron-left"></span>Education</p></a>
+                  <a href="#certification"><span class="glyphicon glyphicon-certificate"></span>Certification</p></a>
+                  <a href="#footer"><span class="glyphicon glyphicon-user"></span>Contact</p></a>
+              </div>
+              <div class="col-sm-3">
+                  <a href="https://github.com/ajaykumar776"><span class="glyphicon glyphicon-briefcase"></span>Github</p></a>
+              </div>
+              <div class="col-sm-3">
+                  <a href="#"><span class="glyphicon glyphicon-user"></span>Ajay-kumar</p></a>
+                  <a href="#"><span class="glyphicon glyphicon-briefcase"></span>Developer</p></a>
+                  <a href="#"><span class="glyphicon glyphicon-chevron-left"></span>7781031768</p></a>
+                  <a href="#"><span class="glyphicon glyphicon-envelope"></span>Ajaykrdtg5@gmail.com</p></a>
+                  <a href="#"><span class="glyphicon glyphicon-map-marker"></span> Bangalore,India</p></a>
+              </div>
+              <div class="col-sm-1"></div>
+          </div>
+      </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="index.js"></script>
+  </footer>
+  <div class="sub-footer">
+      <div class=" bg-warning" id="footer" style="background-color: slategray;">
+          <div class="container">
+              <div style="text-align: center;padding: 10px;"> Created and Maintained by Ajaykumar</div>
+          </div>
+      </div>
+  </div>
+  <script src="plugins/jquery/jquery.min.js"></script>
+  <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/app.js"></script>
     </div>
 </body>
 </html>
