--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p class="card-text">I have made all these project for learning only and also checkout my github profile for more </p><hr>
                         <a href="https://ajaykumar776.github.io/advance_todo/" class="btn btn-primary">To Do App</a><br><hr>
                         <a href="https://ajaykumar776.github.io/tic_tac_game/" class="btn btn-primary">Tic Tac Games</a><hr>
-                        <a href="https://github.com/ajaykumar776/pathology_software_v1" class="btn btn-primary">pathology app</a><hr>
+                        <a href="http://pathology.42web.io/pathology_software_v1/" class="btn btn-primary">pathology app</a><hr>
                         <a href="https://github.com/ajaykumar776/Library_Management_System-LMS-" class="btn btn-primary">Library Management System</a>
                     </div>
                 </div>
